- XKore_bypassBotDetection
  Set to 1 if you want Kore to try to bypass the RO client's bot detection.
  This feature is experimental and has only been tested with the iRO client,
  so enable this at your own risk!
- timeouts.txt: ai_route_npcTalk
  Default 10. If an NPC conversation used to reach your destination takes
  longer than this, it will assume failure.

Internal:
- Obsolete getActorHash() function removed (use Actor::get() instead).
- The format of $npcs_lut has changed, IDs are completely abandoned.
- Attack AI routines should now support players as well.
- New Match::cartItem() function, similar to Match::inventoryItem().
- The S and L pack types have been completely removed. Do not use these
  anymore; use v and V respectively.
- 'ai print' command should mangle less characters into '.'.
- Moved packets to Network/Receive.pm:
	  cart_item_added
	  cart_item_removed
	  item_used
- New whenFlag/whenNotFlag condition references %flags in checkSelfCondition.
  Currently, only plugins or 'eval' command could change %flags so this is
  only useful to developers (you can turn on/off groups of skill blocks easily
  using %flags now).
- whenGroundStatus() now takes a third argument $mine which will make it only
  check for spells originating from you.
- inventory/storage/cart item added/removed packets now set $args->{item}
  so that plugins can access it.
- $ai_v{temp}{pvp} moved to $pvp because the former seems to get erroneously
  cleared sometimes.
- New Actor#snipable method; boolean whether you have snipable LOS to the
  actor.
- "Player Connected" did not trigger 'player' plugin call.
- Store $char->{attack_delay}. You attack once every
  $char->{attack_delay}/500 seconds.
- Use bitshift-packing/unpacking to deal with coordinates in the protocol.
- Support new packets 0229, 022A, 022B, 022C, 01E9 which caused some official
  servers (like mRO and pRO) to not handle actors correctly.

Credits:
- doenet: chatLangCode bugfixes.